--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
             <id>bytecode.space</id>
             <url>https://repo.bytecode.space/repository/maven-public/</url>
         </pluginRepository>
+        <pluginRepository>
+            <id>center</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </pluginRepository>
     </pluginRepositories>
 
     <build>
