--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
             <extension>
                 <groupId>org.apache.maven.extensions</groupId>
                 <artifactId>maven-build-cache-extension</artifactId>
-                <version>1.0.1-SNAPSHOT</version>
+                <version>1.0.1</version>
             </extension>
             <extension>
                 <groupId>co.leantechniques</groupId>
