--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
         </pluginRepository>
     </pluginRepositories>
 
+    <repositories>
+        <repository>
+            <id>nms-repo</id>
+            <url>https://repo.codemc.io/repository/nms/</url>
+        </repository>
+    </repositories>
+
+
     <build>
         <!--        <directory>R:\MavenBuildTarget\VanillaCustomizer\${project.artifactId}\target\</directory>-->
         <directory>${project.basedir}/../.cache/targets/${project.artifactId}/target/</directory>
