--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
-        <jars_libs_folder>D:/Jenkins/Maven-Repository/LoneLibs.jar</jars_libs_folder>
+        <jars_libs_folder>D:/Jenkins/Maven-Repository</jars_libs_folder>
     </properties>
 
     <modules>
